# dist-fs

./: .clang-format  CMakeLists.txt  README.md  client.conf  dist-fs.conf  dist-fs.cpp  dist-fs_host.conf  dist-fs_server.cpp
dist-fs/: README.md  audio_files.cpp  audio_files.hpp  bytecrush  bytecrush.c  bytecrush.h  client.cpp  compressed.bcrush  config.cpp  config.hpp  dist-fs_server.cpp  file_format.hpp  host.cpp  storage.hpp  storage_driver.cpp  utils.cpp  utils.hpp
dist-fs/comms/: comms.c  comms.h  i2c.c  network.c  packet.c  packet.h  spi.c  uart.c
frontend/: interface.cpp
test/: client_imp.cpp  server_imp.cpp  socket.c  socket.h
test_files/: Makefile  wav_info.cpp
test_files/wavs/: file_example_WAV_2_9MG.flac  file_example_WAV_3_1MG.flac
unittests/: CMakeLists.txt  test_compression.cpp  test_metadata_table.cpp  test_storage.cpp  test_storage_fs.cpp
web/: a.out  index.html  interface.cpp
